2021-05-08 belangeo <belangeo@gmail.com>

    * Added documentation for IFFTMatrix object.

2021-05-08 belangeo <belangeo@gmail.com>

    * Added support for item assigment in PyoObjectBase.

2021-01-24 belangeo <belangeo@gmail.com>

    * Fixed FreqShift backward shifting (issue #193).

2021-01-21 belangeo <belangeo@gmail.com>

    * Removed deprecated files.

2021-01-21 belangeo <belangeo@gmail.com>

    * Added Visaul Studio Code integration for Windows, MacOS and Linux.

2021-01-17 belangeo <belangeo@gmail.com>

    * Fixed memory allocation in expr's initexpr function (issue #190).

2020-12-20 belangeo <belangeo@gmail.com>

    * On 64-bit architecture, use long instead of int as PyoObjectTable size.

2020-12-13 belangeo <belangeo@gmail.com>

    * PyoTableObject get(), put() and copyData() methods can read backward with negative indices.

2020-12-12 belangeo <belangeo@gmail.com>

    * Fixed crash when DataTable or NewTable size != len(init).

2020-12-10 belangeo <belangeo@gmail.com>

    * Fixed PadSynthTable crash on Windows.

2020-11-30 belangeo <belangeo@gmail.com>

    * VarPort now updates its increment when the time attribute changes.

2020-11-27 belangeo <belangeo@gmail.com>

    * Added a level argument to PyoMatrixObject.normalize() method.

2020-11-26 belangeo <belangeo@gmail.com>

    * Fixed segmentation fault in PyoMatrixObject.read() method.

2020-11-25 belangeo <belangeo@gmail.com>

    * Added a div method to PyoTableObject.

2020-11-25 belangeo <belangeo@gmail.com>

    * Added a shape argument to PyoTableObject.fadein() and PyoTableObject.fadeout() methods.

2020-11-23 belangeo <belangeo@gmail.com>

    * Added a level argument to PyoTableObject.normalize() method.

2020-11-12 belangeo <belangeo@gmail.com>

    * Added PyoObjectBase.getStopDelay() method (mainly for unit testing).

2020-08-28 belangeo <belangeo@gmail.com>

    * Git tag: 1.0.3.

2020-08-28 belangeo <belangeo@gmail.com>

    * Fixed missing lib dependency links on MacOS.
